refactor: renamed "model" => "schema"
* This is the first step in structuring schemas around schema references (inline or named) and schema declarations (components or inline)
* moved yaml and json parsers to sub-package